style: fix links list gap

--- a/src/components/NavLinksList/NavLinksList.css
+++ b/src/components/NavLinksList/NavLinksList.css
@@ -3,5 +3,6 @@
     padding: 0;
     margin: 0;
     display: flex;
-    color: var(--color-green-10)
+    color: var(--color-green-10);
+    gap: 1.5rem;
 }
